More text-alignment fixes on repository pages

--- a/sass/page_specific/_repository.sass
+++ b/sass/page_specific/_repository.sass
@@ -1,6 +1,10 @@
-table.changesets
+table.changesets,
+table.entries
+  td.age,
   td.author,
-  td.committed_on
-    text-align: inherit
+  td.committed_on,
+  td.revision,
+  td.size
+    text-align: left
   td.checkbox
     padding: 0
